# RP1-bootloader-PoC

./: .gitignore  Cargo.toml  README.md  flake.nix
.cargo/: config.toml
.github/workflows/: ci.yml
linker/: aarch64.lds
rp1_chainboot_poc/: Cargo.toml  build.rs
rp1_chainboot_poc/src/: bcm2712_aon.rs  bcm2712_i2c.rs  boot_context.rs  boot_files.rs  dhcp_boot.rs  dtb_patch.rs  gzip.rs  linux.rs  main.rs  net_boot.rs  panic.rs  placement.rs  rp1_bootstrap.rs  rp1_config.rs  rp1_debug_stub.rs  rp1_dtb_policy.rs  rp1_image.rs  rp1_note.rs
xtask/src/: main.rs
