[package]
name = "rp1_chainboot_poc"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = ["allow-fw-parts-fallback", "log-uart"]
allow-fw-parts-fallback = []
require-rp1-img = []
skip-rp1-reload = []
continue-on-rp1-bootstrap-failure = []
tftp-boot = []
tftp-initramfs = ["tftp-boot"]
log-uart = []
log-semihosting = []

[dependencies]
arch_hal = { git = "https://github.com/Natsu-B/aarch64_type1_hypervisor.git", rev = "c166eb612739f1ca3d928c70121de3a245f9d84d", package = "arch_hal" }
dtb = { git = "https://github.com/Natsu-B/aarch64_type1_hypervisor.git", rev = "c166eb612739f1ca3d928c70121de3a245f9d84d", package = "dtb" }
file = { git = "https://github.com/Natsu-B/aarch64_type1_hypervisor.git", rev = "c166eb612739f1ca3d928c70121de3a245f9d84d", package = "file" }
filesystem = { git = "https://github.com/Natsu-B/aarch64_type1_hypervisor.git", rev = "c166eb612739f1ca3d928c70121de3a245f9d84d", package = "filesystem" }
block-device-api = { git = "https://github.com/Natsu-B/aarch64_type1_hypervisor.git", rev = "c166eb612739f1ca3d928c70121de3a245f9d84d", package = "block-device-api" }
allocator = { git = "https://github.com/Natsu-B/aarch64_type1_hypervisor.git", rev = "c166eb612739f1ca3d928c70121de3a245f9d84d", package = "allocator", features = ["no-alloc-error-handler"] }
mutex = { git = "https://github.com/Natsu-B/aarch64_type1_hypervisor.git", rev = "c166eb612739f1ca3d928c70121de3a245f9d84d", package = "mutex" }
arch_timer = { git = "https://github.com/Natsu-B/aarch64_type1_hypervisor.git", rev = "c166eb612739f1ca3d928c70121de3a245f9d84d", package = "timer" }
io-api = { git = "https://github.com/Natsu-B/aarch64_type1_hypervisor.git", rev = "c166eb612739f1ca3d928c70121de3a245f9d84d", package = "io-api" }
net = { git = "https://github.com/Natsu-B/aarch64_type1_hypervisor.git", rev = "c166eb612739f1ca3d928c70121de3a245f9d84d", package = "net" }
elf = { git = "https://github.com/Natsu-B/aarch64_type1_hypervisor.git", rev = "c166eb612739f1ca3d928c70121de3a245f9d84d", package = "elf" }

embedded-hal = { version = "1", default-features = false }
embedded-hal-bus = { version = "0.3", default-features = false, features = ["alloc"] }
miniz_oxide = { version = "0.9", default-features = false, features = ["with-alloc"] }
crc32fast = { version = "1", default-features = false }
rp1-abi = { git = "https://github.com/Natsu-B/RP1-hal.git", rev = "4026fdc478e932fdbd4a0520ef4c364871acbaea", package = "rp1-abi" }
