[package]
name = "rp1_chainboot_poc"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = ["allow-fw-parts-fallback", "log-uart"]
allow-fw-parts-fallback = []
require-rp1-img = []
skip-rp1-reload = []
continue-on-rp1-bootstrap-failure = []
tftp-boot = []
tftp-initramfs = ["tftp-boot"]
log-uart = []
log-semihosting = []

[dependencies]
arch_hal = { git = "https://github.com/Natsu-B/aarch64_type1_hypervisor.git", rev = "d3811774c2e5bdfddf7a25732ccfb09ec351d48c", package = "arch_hal" }
dtb = { git = "https://github.com/Natsu-B/aarch64_type1_hypervisor.git", rev = "d3811774c2e5bdfddf7a25732ccfb09ec351d48c", package = "dtb" }
file = { git = "https://github.com/Natsu-B/aarch64_type1_hypervisor.git", rev = "d3811774c2e5bdfddf7a25732ccfb09ec351d48c", package = "file" }
filesystem = { git = "https://github.com/Natsu-B/aarch64_type1_hypervisor.git", rev = "d3811774c2e5bdfddf7a25732ccfb09ec351d48c", package = "filesystem" }
block-device-api = { git = "https://github.com/Natsu-B/aarch64_type1_hypervisor.git", rev = "d3811774c2e5bdfddf7a25732ccfb09ec351d48c", package = "block-device-api" }
allocator = { git = "https://github.com/Natsu-B/aarch64_type1_hypervisor.git", rev = "d3811774c2e5bdfddf7a25732ccfb09ec351d48c", package = "allocator", features = ["no-alloc-error-handler"] }
mutex = { git = "https://github.com/Natsu-B/aarch64_type1_hypervisor.git", rev = "d3811774c2e5bdfddf7a25732ccfb09ec351d48c", package = "mutex" }
arch_timer = { git = "https://github.com/Natsu-B/aarch64_type1_hypervisor.git", rev = "d3811774c2e5bdfddf7a25732ccfb09ec351d48c", package = "timer" }
io-api = { git = "https://github.com/Natsu-B/aarch64_type1_hypervisor.git", rev = "d3811774c2e5bdfddf7a25732ccfb09ec351d48c", package = "io-api" }
net = { git = "https://github.com/Natsu-B/aarch64_type1_hypervisor.git", rev = "d3811774c2e5bdfddf7a25732ccfb09ec351d48c", package = "net" }
elf = { git = "https://github.com/Natsu-B/aarch64_type1_hypervisor.git", rev = "d3811774c2e5bdfddf7a25732ccfb09ec351d48c", package = "elf" }

embedded-hal = { version = "1", default-features = false }
embedded-hal-bus = { version = "0.3", default-features = false, features = ["alloc"] }
miniz_oxide = { version = "0.9", default-features = false, features = ["with-alloc"] }
crc32fast = { version = "1", default-features = false }
rp1-abi = { path = "../../RP1-hal/crates/rp1-abi" }
